<?xml version="1.0"?>
<package format="3">
  <name>moon_sim</name>
  <version>0.0.1</version>
  <description>Lunar lander sim using ROS 2 + Gazebo Harmonic</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>     
  <exec_depend>ros_gz_bridge</exec_depend> 
  <exec_depend>ros_gz_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
